<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="#00000000" 
		android:cacheColorHint="#00000000">
        <ImageButton 
	        android:id="@+id/btn_previous"
	        android:layout_width="64dp"
	        android:layout_height="64dp"
	        android:layout_marginLeft="7dp"
	        android:layout_marginRight="7dp"
	        android:background="@drawable/previous"
	        android:contentDescription="@string/previous" 
	        android:cacheColorHint="#00000000"/>
		<ImageButton 
	        android:id="@+id/btn_play"
	        android:layout_width="128dp"
	        android:layout_height="128dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:background="@drawable/play128"
	        android:contentDescription="@string/play" 
	        android:cacheColorHint="#00000000"/>
		<ImageButton 
	        android:id="@+id/btn_next"
	        android:layout_width="64dp"
	        android:layout_height="64dp"
	        android:layout_marginLeft="7dp"
	        android:layout_marginRight="7dp"
	        android:background="@drawable/next"
	        android:contentDescription="@string/next"
	        android:cacheColorHint="#00000000"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" >
		<ImageButton 
	        android:id="@+id/btn_rewind"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:layout_marginLeft="7dp"
	        android:layout_marginRight="7dp"
	        android:background="@drawable/rewind"
	        android:contentDescription="@string/rewind" 
	        android:cacheColorHint="#00000000"/>
		<ImageButton 
	        android:id="@+id/btn_pause"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:background="@drawable/pause"
	        android:contentDescription="@string/pause" 
	        android:cacheColorHint="#00000000"/>
		<ImageButton
	        android:id="@+id/btn_stop"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:background="@drawable/stop"
	        android:contentDescription="@string/stop" 
	        android:cacheColorHint="#00000000"/>
		<ImageButton 
	        android:id="@+id/btn_forward"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:layout_marginLeft="7dp"
	        android:layout_marginRight="7dp"
	        android:background="@drawable/forward"
	        android:contentDescription="@string/forward" 
	        android:cacheColorHint="#00000000"/>
    </LinearLayout>
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp">
		<ImageButton 
	        android:id="@+id/btn_volume_down"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:layout_marginLeft="7dp"
	        android:layout_marginRight="7dp"
	        android:background="@drawable/down"
	        android:contentDescription="@string/volume_down" 
	        android:cacheColorHint="#00000000"/>
		<TextView
		    android:id="@+id/text_volume"
		    android:layout_width="50dp"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:textColor="#000000"
	        android:textSize="20sp"
		    android:background="#00000000"
		    android:cacheColorHint="#00000000"
		    android:gravity="center"
		    android:freezesText="true" />
		<ImageButton 
	        android:id="@+id/btn_volume_up"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:layout_marginLeft="7dp"
	        android:layout_marginRight="7dp"
	        android:background="@drawable/up"
	        android:contentDescription="@string/volume_up" 
	        android:cacheColorHint="#00000000"/>
    </LinearLayout>
    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp">
		<TextView
		    android:id="@+id/text_elapsed"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:textColor="#000000"
	        android:textSize="12sp"
	        android:textStyle="bold|italic"
		    android:background="#00000000"
		    android:cacheColorHint="#00000000"
		    android:gravity="left"
		    android:layout_gravity="right"
		    android:layout_alignParentLeft="true"
		    android:freezesText="true" />
		<TextView
		    android:id="@+id/text_track_total_length"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:textColor="#000000"
	        android:textSize="12sp"
	        android:textStyle="bold|italic"
		    android:background="#00000000"
		    android:cacheColorHint="#00000000"
		    android:gravity="right"
		    android:layout_gravity="right"
		    android:layout_alignParentRight="true"
		    android:freezesText="true" />
    </RelativeLayout>
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp">
		<ProgressBar
		    android:id="@+id/progress_status"
		    android:layout_width="fill_parent"
		    android:layout_height="15dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    style="@android:style/Widget.ProgressBar.Horizontal"
		    android:background="#00000000"
		    android:cacheColorHint="#00000000"
		    android:progressDrawable="@drawable/layout_progress_bar" />
	</LinearLayout>
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp">
		<TextView
		    android:id="@+id/text_status"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:textColor="#000000"
	        android:textSize="12sp"
	        android:textStyle="bold|italic"
		    android:background="#00000000"
		    android:cacheColorHint="#00000000"
		    android:gravity="center"
		    android:freezesText="true" />
    </LinearLayout>
</LinearLayout>
